# rust-learn

./: .gitignore  Cargo.toml  README.md  RECORD.md  log.txt  package.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
crate-lib/: Cargo.toml  log4rs.yaml
crate-lib/src/log/: env_logger.rs  log4rs.rs  mod.rs
crates/attribute_macro/: Cargo.toml
crates/declarative_macro/: Cargo.toml  RECORD.md
crates/declarative_macro/src/: demo.rs
crates/derive_macro/examples/: add_debug_macro_demo.rs  optional_macro.rs  query.rs
crates/derive_macro/src/: lib.rs
crates/derive_macro/src/j2_template_builder/: field_info.rs  j2.rs  mod.rs  utils.rs
crates/derive_macro/src/syn_builder/: builder.rs  field_info.rs
crates/function_like_macro/: Cargo.toml
crates/function_like_macro/src/: lib.rs
crates/procedural_macro/: Cargo.toml  RECORD.md  REDEME.md  属性宏.md  派生宏.md
crates/procedural_macro/examples/: command.rs  derive.rs  query.rs  raw_command.rs  test.rs
crates/procedural_macro/src/: lib.rs
crates/procedural_macro/src/raw_builder/: index.rs
crates/syntax/: Cargo.toml  lib.rs
crates/syntax/advance/: mod.rs
crates/syntax/advance/_trait/: any.rs  display.rs  extend_trait.rs  mod.rs  new_type.rs  operator_reload.rs  relevance_type.rs  remove_same_fn.rs
crates/syntax/advance/_type/: never_type.rs  size_trait.rs
crates/syntax/advance/oo/: dyn_trait.rs
crates/syntax/advance/schema_match/: other.rs
crates/syntax/advance/smart_pointer/: mem_leakage.rs
crates/syntax/base/_type/: _enum.rs  _option.rs  _string.rs  _struct.rs  _trait.rs  _vector.rs  err.rs  genericity.rs  hash_map.rs  thiserror_anyhow.rs
crates/syntax/base/other/: fn_send_fn.rs  iterator.rs
crates/syntax/base/syntax/: life.rs
crates/use_lib_demo/: Cargo.toml
crates/use_lib_demo/src/log/: env_logger.rs  log4rs.rs
derive_declaration_example/: Cargo.toml
derive_example/: Cargo.toml
derive_example/examples/: command.rs  derive.rs  query.rs  raw_command.rs
derive_example/hello_macro_derive/: Cargo.toml
derive_example/process-derive/: Cargo.toml
derive_example/process-derive/examples/: command.rs  derive.rs  query.rs  raw_command.rs
derive_example/process-derive/src/: lib.rs
derive_example/process-derive/src/builder/: index.rs
derive_example/process-derive/src/raw_builder/: j2.rs  mod.rs
derive_example/process-derive/templates/: builder.j2
macro/attribute_macro/: 属性宏.md
macro/attribute_macro/src/: lib.rs
macro/declarative_macro/src/: demo.rs
macro/derive_macro/: Cargo.toml  派生宏.md
macro/derive_macro/examples/: command.rs  raw_command.rs
macro/derive_macro/src/j2_template_builder/: field_info.rs  j2.rs  utils.rs
macro/derive_macro/src/syn_builder/: builder.rs  field_info.rs  mod.rs
macro/function_like_macro/: 类函数宏.md
macro/function_like_macro/examples/: query.rs
macro/function_like_macro/src/: lib.rs
macro_example/: Cargo.toml
macro_example/hello_macro_derive/src/: lib.rs
macro_example/use/: Cargo.toml
run/: Cargo.toml
run/src/: main.rs
src/: lib.rs  main.rs
src/api/: _match.rs  _trait.rs  _vector.rs  closure.rs  fn_send_fn.rs  mod.rs  smart_pointer.rs  thread.rs  use_closure.rs  use_doc.rs  use_enum.rs  use_err.rs  use_genericity.rs  use_hash_map.rs  use_if_let.rs  use_iterator.rs  use_lift.rs  use_match.rs  use_option.rs  use_struct.rs  use_trait.rs  use_vector.rs
src/api/_async/: feature.rs  fulfill_future.rs  mod.rs
src/api/advanced_trait/: mod.rs  super_trait.rs
src/api/advanced_type/: mod.rs  never_type.rs  type_alise.rs
src/api/oo/: oo_design_mode.rs  safe_trait.rs
src/api/publish/: mod.rs  pub_use.rs
src/api/schema_match/: _match.rs  other.rs  while_if_let.rs
src/api/smart_pointer/: README.md  box_t.rs  deref_trait.rs  drop_trait.rs  mod.rs  ref_cell_t.rs
src/api/thread/: mod.rs  share_state_lock.rs  thread_run.rs
src/api/unsafe_rust/: mod.rs  raw_pointer.rs  static_var.rs  unsafe_trait.rs
src/example/: mini_grep.rs  mini_grep_lib.rs  mod.rs  shell.rs
src/example/server/: mod.rs  single_server.rs  thread_poll.rs  thread_pool_server.rs  thread_single_server.rs
src/example/server/html/: 404.html
syntax/: Cargo.toml  lib.rs  main.rs
syntax/advance/_async/: fulfill_future.rs  mod.rs
syntax/advance/_trait/: extend_trait.rs  new_type.rs  operator_reload.rs  remove_same_fn.rs
syntax/advance/_type/: mod.rs  never_type.rs  size_trait.rs
syntax/advance/oo/: mod.rs  oo_design_mode.rs
syntax/advance/schema_match/: while_if_let.rs
syntax/advance/smart_pointer/: mem_leakage.rs  rc_t.rs
syntax/advance/thread/: sync.rs
syntax/advance/unsafe_rust/: extern_ffi.rs
syntax/api/: genericity.rs  install.rs  mod.rs  option.rs
syntax/api/advanced_trait/: new_type.rs  relevance_type.rs  remove_same_fn.rs
syntax/api/advanced_type/: size_trait.rs
syntax/api/macro_feature/: example.rs
syntax/api/oo/: mod.rs
syntax/api/publish/: crate_login.rs
syntax/api/smart_pointer/: mem_leakage.rs
syntax/api/unsafe_rust/: mod.rs  raw_pointer.rs
syntax/base/: mod.rs
syntax/base/_type/: _struct.rs  _trait.rs  err.rs  mod.rs
syntax/base/other/: mod.rs
syntax/base/syntax/: mod.rs
syntax/document/: cargo_doc.md  安装.md
syntax/example/: read_line.rs
syntax/src/: main.rs
syntax/src/advance/_async/: feature.rs  tokio_async.rs
syntax/src/advance/_trait/: new_type.rs
syntax/src/advance/schema_match/: _match.rs  mod.rs  other.rs
syntax/src/advance/thread/: message_send.rs  mod.rs
syntax/src/base/_type/: _enum.rs  _string.rs
syntax/src/example/: get_ip.rs  mini_grep.rs  mod.rs
syntax_example/: Cargo.toml
syntax_example/src/advance/_trait/: mod.rs
syntax_example/src/advance/schema_match/: other.rs
syntax_example/src/base/_type/: mod.rs
syntax_example/src/base/syntax/: closure.rs
syntax_example/src/document/: 发布.md
workspace/: Cargo.toml
workspace/main/: Cargo.toml
workspace/main/src/: main.rs
workspace/package/src/: main.rs
