# 工作空间
# 只能创建一层，不能递归创建 workspace
# 命令 cargo new xx --lib
# 执行工作空间的 main.rs cargo run -p xx
# 依赖另一个工作空间的包：xx = { "../xx" }

[package]
name = "rust-learn"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "syntax/src/main.rs"

[workspace]
members = [
    "derive_example",
    "syntax_example",
]

# [dependencies]
# package = { path = "../package" } # workspace 及 宏的调用都可以用 path 表明关系
