# Cargo.toml 配置网址： https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "syntax_example"
description = "搜索后展示的描述字段"
license = "MIT OR Apache-2.0"
keywords = ["rust", "learn"]
version = "0.1.0"
author = "MiniOcean404"
edition = "2021"
exclude = ["index.node"] # 发布时要排除的文件。
include = ["/src", "COPYRIGHT", "/examples", "!/examples/big_example"] # 发布时要包含的文件。
rust-version = "1.65.0" # 最小 Rust 版本

# default-run = "main" # 在指定 bin 时候指定 cargo run --package [workspace] --bin [bin 下文件] 这个指令中  --bin [bin 下文件] 的默认执行


[lib]
name = "root"
path = "./lib.rs"        # The source file of the target.
# test = true            # 是否测试
# doctest = true         # 测试文档示例
# bench = true           # 基准测试
# doc = true             # 文档
# proc-macro = false     # true 时 为一个 proc-macro 库
# harness = true         # Use libtest harness.
# edition = "2015"       # 目标版本
# crate-type = ["lib"]   # 要生成的crate类型
# required-features = [] # 构建此目标所需的特性(lib的N/A)。

# 包库依赖项。
[dependencies]
# Rust 编译 .node 模块给 Nodejs 调用: https://neon-bindings.com/
# 开启可编译 wasm 的库，让 rs 支持 js 特性
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"
tokio = { version = "1.21.2", features = ["full"] }

# 示例、测试和基准测试的依赖关系。
[dev-dependencies]

# 构建脚本的依赖项。
[build-dependencies]
