[package]
name = "attribute_macro"
description.workspace = true
license.workspace = true
keywords.workspace = true
version.workspace = true
edition.workspace = true
exclude.workspace = true
include.workspace = true
rust-version.workspace = true

[lib]
name = "attribute_macro"
path = "./src/lib.rs"     # The source file of the target.
# 开启过程宏使用
proc-macro = true

[dependencies]
# 解析 rust 源码: 对 TokenStream 解析的库，它提供了丰富的数据结构，对语法树中遇到的各种 Rust 语法都有支持。
# syn crate 默认所有数据结构都不带一些基本的 trait，比如 Debug，所以如果想打印数据结构的话，需要使用 extra-traits feature
syn.workspace = true
# quote 用于将 Rust 语法树数据结构转化为源代码。
quote.workspace = true
# 可以很方便的处理宏里面 attributes
darling.workspace = true
# 由于 syn/quote 生成的 TokenStream 是 proc-macro2 的类型，所以还需要使用proc-macro2库，
# 它是对 proc-macro 的简单封装，使用起来更方便，而且可以让过程宏可以单元测试
proc-macro2.workspace = true